[project]
name = "bitcoin-ai-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.5.43",
    "google-genai>=1.67.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "typer>=0.24.1",
    "rich>=13.9.4",
]
